# sip

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  ci_log.txt
.github/workflows/: ci.yml  publish.yml
crates/gb28181-codec/: Cargo.toml
crates/gb28181-codec/src/: encoding.rs  lib.rs  types.rs
crates/gb28181-xml/: Cargo.toml
crates/gb28181-xml/src/: control.rs  lib.rs  query.rs  response.rs  types.rs
crates/sip-core/: Cargo.toml
crates/sip-core/src/: config.rs  metrics.rs
crates/sip-dialog/: Cargo.toml
crates/sip-dialog/src/: dialog.rs  lib.rs  manager.rs  session.rs  state.rs  types.rs
crates/sip-message/: Cargo.toml
crates/sip-message/src/: builder.rs  lib.rs  parser.rs  types.rs  uri.rs
crates/sip-message/src/headers/: auth.rs  contact.rs  cseq.rs  from_to.rs  mod.rs  route.rs  via.rs
crates/sip-registration/: Cargo.toml
crates/sip-registration/src/: auth.rs  lib.rs  manager.rs  registrar.rs  types.rs
crates/sip-sdp/: Cargo.toml
crates/sip-sdp/src/: builder.rs  gb28181.rs  lib.rs  parser.rs  types.rs
crates/sip-transaction/: Cargo.toml
crates/sip-transaction/src/: event.rs  invite_client.rs  invite_server.rs  manager.rs  non_invite_client.rs  non_invite_server.rs  table.rs  timer.rs
crates/sip-transport/: Cargo.toml
crates/sip-transport/src/: codec.rs  connection_pool.rs  dns.rs  lib.rs  manager.rs  tcp.rs  traits.rs  udp.rs
crates/sip-transport/src/tls/: rustls_transport.rs
crates/sip-ua/: Cargo.toml
crates/sip-ua/benches/: message_builder.rs  message_parser.rs
crates/sip-ua/examples/: basic_call.rs  custom_transport.rs  gb28181_device.rs  gb28181_server.rs  registration.rs
crates/sip-ua/src/: call.rs  config.rs  device_registry.rs  engine.rs  event.rs  gb28181.rs  gb28181_server.rs  lib.rs  profile.rs  subscription.rs  uac.rs  uas.rs
crates/sip-ua/tests/: integration_test.rs
crates/siprs-core/: Cargo.toml  README.md
crates/siprs-core/src/: error.rs  lib.rs  types.rs
crates/siprs-dialog/: Cargo.toml  README.md
crates/siprs-dialog/src/: lib.rs  manager.rs  state.rs  types.rs
crates/siprs-gb28181-codec/: Cargo.toml  README.md
crates/siprs-gb28181-codec/src/: encoding.rs  lib.rs
crates/siprs-gb28181-xml/: Cargo.toml  README.md
crates/siprs-gb28181-xml/src/: cascading.rs  control.rs  lib.rs  notify.rs  query.rs  response.rs  types.rs
crates/siprs-media/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/siprs-media/src/: codec.rs  lib.rs  rtcp.rs  rtp.rs  session.rs
crates/siprs-message/: Cargo.toml  README.md
crates/siprs-message/src/: builder.rs  lib.rs  parser.rs  types.rs  uri.rs
crates/siprs-message/src/headers/: auth.rs  contact.rs  cseq.rs  from_to.rs  mod.rs  route.rs  via.rs
crates/siprs-registration/: Cargo.toml  README.md
crates/siprs-registration/src/: auth.rs  lib.rs  manager.rs  registrar.rs  types.rs
crates/siprs-sdp/: Cargo.toml  README.md
crates/siprs-sdp/src/: builder.rs  gb28181.rs  lib.rs  parser.rs
crates/siprs-transaction/: Cargo.toml  README.md
crates/siprs-transaction/src/: event.rs  invite_client.rs  invite_server.rs  lib.rs  manager.rs  non_invite_client.rs  non_invite_server.rs  table.rs  timer.rs
crates/siprs-transport/: Cargo.toml  README.md
crates/siprs-transport/src/: codec.rs  connection_pool.rs  dns.rs  lib.rs  manager.rs  tcp.rs  tls.rs  traits.rs  udp.rs  ws.rs
crates/siprs-transport/src/tls/: rustls_transport.rs
crates/siprs-ua/: Cargo.toml  README.md
crates/siprs-ua/benches/: message_builder.rs  message_parser.rs
crates/siprs-ua/examples/: basic_call.rs  custom_transport.rs  gb28181_catalog.rs  gb28181_device.rs  gb28181_server.rs  registration.rs  simple_call.rs  simple_register.rs
crates/siprs-ua/src/: agent.rs  config.rs  device_registry.rs  engine.rs  event.rs  gb28181.rs  gb28181_server.rs  lib.rs  subscription.rs  uac.rs  uas.rs
crates/siprs-ua/tests/: integration_test.rs
src/: lib.rs
