[package]
name = "sip"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A complete SIP protocol stack with GB28181 support"
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true

[workspace]
resolver = "2"
members = [
    "crates/sip-core",
    "crates/sip-message",
    "crates/sip-transport",
    "crates/sip-transaction",
    "crates/sip-dialog",
    "crates/sip-registration",
    "crates/sip-ua",
    "crates/sip-sdp",
    "crates/gb28181-codec",
    "crates/gb28181-xml",
    ".",  # Root crate: unified re-export of all sub-crates
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sip-rs/sip"
description = "A complete SIP protocol stack with GB28181 support"
keywords = ["sip", "voip", "gb28181", "video-surveillance", "protocol"]
categories = ["network-programming", "multimedia", "parser-implementations"]
readme = "README.md"
homepage = "https://github.com/sip-rs/sip"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1"

# Serialization
bytes = "1"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pki-types = "1"
webpki-roots = "0.26"

# DNS
trust-dns-resolver = "0.23"

# Codec
tokio-util = { version = "0.7", features = ["codec"] }

# Crypto (for digest auth)
md-5 = "0.10"
hmac = "0.12"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Testing
tokio-test = "0.4"
criterion = "0.5"

# Internal crates
sip-core = { version = "0.1.0", path = "crates/sip-core" }
sip-message = { version = "0.1.0", path = "crates/sip-message" }
sip-transport = { version = "0.1.0", path = "crates/sip-transport" }
sip-transaction = { version = "0.1.0", path = "crates/sip-transaction" }
sip-dialog = { version = "0.1.0", path = "crates/sip-dialog" }
sip-registration = { version = "0.1.0", path = "crates/sip-registration" }
sip-ua = { version = "0.1.0", path = "crates/sip-ua" }
sip-sdp = { version = "0.1.0", path = "crates/sip-sdp" }
gb28181-codec = { version = "0.1.0", path = "crates/gb28181-codec" }
gb28181-xml = { version = "0.1.0", path = "crates/gb28181-xml" }

[dependencies]
sip-core.workspace = true
sip-message.workspace = true
sip-transport.workspace = true
sip-transaction.workspace = true
sip-dialog.workspace = true
sip-registration.workspace = true
sip-ua.workspace = true
sip-sdp.workspace = true
gb28181-codec.workspace = true
gb28181-xml.workspace = true