[package]
name = "siprs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A complete SIP protocol stack with GB28181 support"
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
exclude = [".arts/*", ".github/*"]

[workspace]
resolver = "2"
members = [
    "crates/siprs-core",
    "crates/siprs-message",
    "crates/siprs-transport",
    "crates/siprs-transaction",
    "crates/siprs-dialog",
    "crates/siprs-registration",
    "crates/siprs-ua",
    "crates/siprs-sdp",
    "crates/siprs-gb28181-codec",
    "crates/siprs-gb28181-xml",
    ".",  # Root crate: unified re-export of all sub-crates
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sip-rs/sip"
description = "A complete SIP protocol stack with GB28181 support"
keywords = ["sip", "voip", "gb28181", "video-surveillance", "protocol"]
categories = ["network-programming", "multimedia", "parser-implementations"]
readme = "README.md"
homepage = "https://github.com/sip-rs/sip"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1"

# Serialization
bytes = "1"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pki-types = "1"
webpki-roots = "0.26"

# DNS
trust-dns-resolver = "0.23"

# Codec
tokio-util = { version = "0.7", features = ["codec"] }

# Crypto (for digest auth)
md-5 = "0.10"
hmac = "0.12"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Testing
tokio-test = "0.4"
criterion = "0.5"

# Internal crates
siprs-core = { version = "0.1.0", path = "crates/siprs-core" }
siprs-message = { version = "0.1.0", path = "crates/siprs-message" }
siprs-transport = { version = "0.1.0", path = "crates/siprs-transport" }
siprs-transaction = { version = "0.1.0", path = "crates/siprs-transaction" }
siprs-dialog = { version = "0.1.0", path = "crates/siprs-dialog" }
siprs-registration = { version = "0.1.0", path = "crates/siprs-registration" }
siprs-ua = { version = "0.1.0", path = "crates/siprs-ua" }
siprs-sdp = { version = "0.1.0", path = "crates/siprs-sdp" }
siprs-gb28181-codec = { version = "0.1.0", path = "crates/siprs-gb28181-codec" }
siprs-gb28181-xml = { version = "0.1.0", path = "crates/siprs-gb28181-xml" }

[dependencies]
siprs-core.workspace = true
siprs-message.workspace = true
siprs-transport.workspace = true
siprs-transaction.workspace = true
siprs-dialog.workspace = true
siprs-registration.workspace = true
siprs-ua.workspace = true
siprs-sdp.workspace = true
siprs-gb28181-codec.workspace = true
siprs-gb28181-xml.workspace = true