[package]
name = "gb28181-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GB28181 20-digit national standard encoding parser and generator"
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
sip-core.workspace = true
thiserror.workspace = true

[dev-dependencies]