[package]
name = "sip-message"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SIP message parsing and building with URI, headers, and body support"
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
sip-core.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true