[package]
name = "sip-registration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SIP registration with MD5 digest authentication and registrar server"
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
sip-core.workspace = true
sip-message.workspace = true
sip-transaction.workspace = true
md-5.workspace = true
hmac.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid.workspace = true
async-trait.workspace = true