[package]
name = "sip-sdp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SDP parsing and building with GB28181 extensions for video surveillance"
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
sip-core.workspace = true
thiserror.workspace = true

[dev-dependencies]