[package]
name = "sip-transaction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SIP transaction layer with RFC 3261 state machines and timers"
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
sip-core.workspace = true
sip-message.workspace = true
sip-transport.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
