[package]
name = "sip-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SIP transport layer with UDP, TCP, and TLS support"
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true

[features]
default = ["tls-rustls"]
tls-rustls = ["rustls", "tokio-rustls", "rustls-pki-types", "webpki-roots"]
tls-native = []  # reserved for future native-tls support

[dependencies]
sip-core.workspace = true
sip-message.workspace = true
tokio.workspace = true
async-trait.workspace = true
tokio-util.workspace = true
tracing.workspace = true
trust-dns-resolver.workspace = true
bytes.workspace = true
futures.workspace = true

# TLS (feature-gated)
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }

[dev-dependencies]
tokio-test.workspace = true
