[package]
name = "sip-ua"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SIP User Agent core with SipEngine, GB28181 device and platform support"
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
sip-core.workspace = true
sip-message.workspace = true
sip-transport.workspace = true
sip-transaction.workspace = true
sip-dialog.workspace = true
sip-registration.workspace = true
sip-sdp.workspace = true
gb28181-codec.workspace = true
gb28181-xml.workspace = true
tokio.workspace = true
tracing.workspace = true

async-trait.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true
tracing-subscriber.workspace = true

[[bench]]
name = "message_parser"
harness = false

[[bench]]
name = "message_builder"
harness = false