[package]
name = "siprs-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, error handling, configuration, and metrics for the SIP protocol stack"
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
uuid.workspace = true