[package]
name = "siprs-gb28181-xml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GB28181 XML message processing for device catalog, control, and queries"
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
siprs-gb28181-codec.workspace = true
thiserror.workspace = true