[package]
name = "siprs-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SIP transport layer with UDP, TCP, TLS, and WebSocket support"
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true

[features]
default = ["tls-rustls", "ws"]
tls-rustls = ["rustls", "tokio-rustls", "rustls-pki-types", "webpki-roots"]
tls-native = []  # reserved for future native-tls support
ws = ["tokio-tungstenite"]
wss = ["tokio-tungstenite/native-tls"]

[dependencies]
siprs-core.workspace = true
siprs-message.workspace = true
tokio.workspace = true
async-trait.workspace = true
tokio-util.workspace = true
tracing.workspace = true
trust-dns-resolver.workspace = true
bytes.workspace = true
futures.workspace = true

# TLS (feature-gated)
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }

# WebSocket (feature-gated)
tokio-tungstenite = { version = "0.24", optional = true }

[dev-dependencies]
tokio-test.workspace = true
